package br.com.EcoPulse.config;

import br.com.EcoPulse.exception.PersistenceException;
import java.sql.Connection;
import java.sql.DriverManager;
import java.sql.PreparedStatement;
import java.sql.ResultSet;
import java.sql.SQLException;
import java.sql.Statement;

/** Fábrica de conexões Oracle e inicialização centralizada do schema EcoPulse. */
public final class ConnectionFactory {
    private static final String URL = "jdbc:oracle:thin:@localhost:1521/XEPDB1";
    private static final String USER = "ecopulse";
    private static final String PASSWORD = "ecopulse123";

    private ConnectionFactory() { }

    public static Connection getConnection() throws SQLException {
        try {
            Class.forName("oracle.jdbc.OracleDriver");
            return DriverManager.getConnection(URL, USER, PASSWORD);
        } catch (ClassNotFoundException exception) {
            throw new SQLException("Driver Oracle ojdbc8 não está disponível no classpath", exception);
        }
    }

    public static void initializeDatabase() {
        String[] tables = {
            "CREATE TABLE T_CHLNG_USERS (id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, external_id VARCHAR2(100), username VARCHAR2(100) NOT NULL, email VARCHAR2(150) NOT NULL UNIQUE, created_at TIMESTAMP WITH TIME ZONE NOT NULL, updated_at TIMESTAMP WITH TIME ZONE NOT NULL)",
            "CREATE TABLE T_CHLNG_ACTIVITIES (id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, user_id NUMBER NOT NULL, type VARCHAR2(80) NOT NULL, activity_timestamp TIMESTAMP WITH TIME ZONE NOT NULL, metadata VARCHAR2(2000), CONSTRAINT fk_activity_user FOREIGN KEY (user_id) REFERENCES T_CHLNG_USERS(id))",
            "CREATE TABLE T_CHLNG_AVATARS (id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, user_id NUMBER NOT NULL, name VARCHAR2(100) NOT NULL, visual_config VARCHAR2(4000), personality_type VARCHAR2(100), level_number NUMBER(10) DEFAULT 1 NOT NULL, experience_points NUMBER(19) DEFAULT 0 NOT NULL, last_interaction TIMESTAMP WITH TIME ZONE, created_at TIMESTAMP WITH TIME ZONE NOT NULL, updated_at TIMESTAMP WITH TIME ZONE NOT NULL, CONSTRAINT fk_avatar_user FOREIGN KEY (user_id) REFERENCES T_CHLNG_USERS(id))",
            "CREATE TABLE T_CHLNG_CHALLENGES (id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, title VARCHAR2(150) NOT NULL, description VARCHAR2(2000), rules VARCHAR2(4000), start_date TIMESTAMP WITH TIME ZONE, end_date TIMESTAMP WITH TIME ZONE, reward_points NUMBER(10) DEFAULT 0 NOT NULL, status VARCHAR2(40) NOT NULL)",
            "CREATE TABLE T_CHLNG_COMMUNITIES (id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, name VARCHAR2(150) NOT NULL, description VARCHAR2(2000), created_at TIMESTAMP WITH TIME ZONE NOT NULL)",
            "CREATE TABLE T_CHLNG_REWARDS (id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, name VARCHAR2(150) NOT NULL, description VARCHAR2(2000), type VARCHAR2(80) NOT NULL, reward_value NUMBER(10) DEFAULT 0 NOT NULL)",
            "CREATE TABLE T_CHLNG_MISSIONS (id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, title VARCHAR2(150) NOT NULL, description VARCHAR2(2000), type VARCHAR2(80) NOT NULL, reward_points NUMBER(10) DEFAULT 0 NOT NULL, reward_item_id NUMBER, is_active NUMBER(1) DEFAULT 1 NOT NULL, created_at TIMESTAMP WITH TIME ZONE NOT NULL, updated_at TIMESTAMP WITH TIME ZONE NOT NULL, CONSTRAINT fk_mission_reward FOREIGN KEY (reward_item_id) REFERENCES T_CHLNG_REWARDS(id))",
            "CREATE TABLE T_CHLNG_GROUP_CHALLENGES (id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, group_id NUMBER NOT NULL, challenge_id NUMBER NOT NULL, score NUMBER(10) DEFAULT 0 NOT NULL, status VARCHAR2(40) NOT NULL, CONSTRAINT fk_group_challenge FOREIGN KEY (challenge_id) REFERENCES T_CHLNG_CHALLENGES(id))",
            "CREATE TABLE T_CHLNG_STREAKS (id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, user_id NUMBER NOT NULL, type VARCHAR2(80) NOT NULL, current_count NUMBER(10) DEFAULT 0 NOT NULL, highest_count NUMBER(10) DEFAULT 0 NOT NULL, last_activity_at TIMESTAMP WITH TIME ZONE, created_at TIMESTAMP WITH TIME ZONE NOT NULL, updated_at TIMESTAMP WITH TIME ZONE NOT NULL, CONSTRAINT fk_streak_user FOREIGN KEY (user_id) REFERENCES T_CHLNG_USERS(id))",
            "CREATE TABLE T_CHLNG_USER_MISSIONS (id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, user_id NUMBER NOT NULL, mission_id NUMBER NOT NULL, status VARCHAR2(40) NOT NULL, progress NUMBER(10) DEFAULT 0 NOT NULL, completed_at TIMESTAMP WITH TIME ZONE, assigned_at TIMESTAMP WITH TIME ZONE NOT NULL, CONSTRAINT fk_user_mission_user FOREIGN KEY (user_id) REFERENCES T_CHLNG_USERS(id), CONSTRAINT fk_user_mission_mission FOREIGN KEY (mission_id) REFERENCES T_CHLNG_MISSIONS(id))",
            "CREATE TABLE T_CHLNG_USER_REWARDS (id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, user_id NUMBER NOT NULL, reward_id NUMBER NOT NULL, acquired_at TIMESTAMP WITH TIME ZONE NOT NULL, is_claimed NUMBER(1) DEFAULT 0 NOT NULL, CONSTRAINT fk_user_reward_user FOREIGN KEY (user_id) REFERENCES T_CHLNG_USERS(id), CONSTRAINT fk_user_reward_reward FOREIGN KEY (reward_id) REFERENCES T_CHLNG_REWARDS(id))"
        };
        try (Connection connection = getConnection()) {
            for (String table : tables) createTableIfAbsent(connection, table);
        } catch (SQLException exception) {
            throw new PersistenceException("Não foi possível inicializar o banco Oracle", exception);
        }
    }

    /** Remove todos os registros, preservando as tabelas e o schema. */
    public static void clearData() {
        String[] tables = {
            "T_CHLNG_USER_REWARDS", "T_CHLNG_USER_MISSIONS", "T_CHLNG_GROUP_CHALLENGES",
            "T_CHLNG_STREAKS", "T_CHLNG_AVATARS", "T_CHLNG_ACTIVITIES", "T_CHLNG_MISSIONS",
            "T_CHLNG_REWARDS", "T_CHLNG_CHALLENGES", "T_CHLNG_COMMUNITIES", "T_CHLNG_USERS"
        };
        try (Connection connection = getConnection(); Statement statement = connection.createStatement()) {
            for (String table : tables) statement.executeUpdate("DELETE FROM " + table);
        } catch (SQLException exception) {
            throw new PersistenceException("Não foi possível limpar os registros do banco Oracle", exception);
        }
    }

    private static void createTableIfAbsent(Connection connection, String ddl) throws SQLException {
        String tableName = ddl.substring("CREATE TABLE ".length(), ddl.indexOf(" (")).toUpperCase();
        String query = "SELECT COUNT(*) FROM USER_TABLES WHERE TABLE_NAME = ?";
        try (PreparedStatement ps = connection.prepareStatement(query)) {
            ps.setString(1, tableName);
            try (ResultSet rs = ps.executeQuery()) {
                rs.next();
                if (rs.getInt(1) == 0) {
                    try (Statement statement = connection.createStatement()) { statement.execute(ddl); }
                }
            }
        }
    }
}
