package br.com.EcoPulse.repository.dao;

import br.com.EcoPulse.config.ConnectionFactory;
import br.com.EcoPulse.domain.Mission;
import java.sql.*;
import java.util.ArrayList;
import java.util.List;
import java.util.Optional;

public class MissionDao {
    private static final String COLUMNS="id,title,description,type,reward_points,reward_item_id,is_active,created_at,updated_at";
    public Mission create(Mission m){String sql="INSERT INTO T_CHLNG_MISSIONS (title,description,type,reward_points,reward_item_id,is_active,created_at,updated_at) VALUES (?,?,?,?,?,?,?,?,?)";try(Connection c=ConnectionFactory.getConnection();PreparedStatement ps=c.prepareStatement(sql)){bind(ps,m);ps.executeUpdate();try(PreparedStatement id=c.prepareStatement("SELECT id FROM T_CHLNG_MISSIONS WHERE title=? ORDER BY id DESC FETCH FIRST 1 ROWS ONLY")){id.setString(1,m.getTitle());try(ResultSet rs=id.executeQuery()){if(rs.next())m.setId(rs.getLong(1));}}return m;}catch(SQLException e){throw new IllegalStateException("Erro ao criar missão",e);}}
    public Optional<Mission> findById(Long id){try(Connection c=ConnectionFactory.getConnection();PreparedStatement ps=c.prepareStatement("SELECT "+COLUMNS+" FROM T_CHLNG_MISSIONS WHERE id=?")){ps.setLong(1,id);try(ResultSet rs=ps.executeQuery()){return rs.next()?Optional.of(map(rs)):Optional.empty();}}catch(SQLException e){throw new IllegalStateException("Erro ao buscar missão",e);}}
    public List<Mission> findAll(boolean onlyActive){List<Mission> result=new ArrayList<>();String sql="SELECT "+COLUMNS+" FROM T_CHLNG_MISSIONS"+(onlyActive?" WHERE is_active=1":"")+" ORDER BY id";try(Connection c=ConnectionFactory.getConnection();PreparedStatement ps=c.prepareStatement(sql);ResultSet rs=ps.executeQuery()){while(rs.next())result.add(map(rs));return result;}catch(SQLException e){throw new IllegalStateException("Erro ao listar missões",e);}}
    public Mission update(Mission m){String sql="UPDATE T_CHLNG_MISSIONS SET title=?,description=?,type=?,reward_points=?,reward_item_id=?,is_active=?,updated_at=? WHERE id=?";try(Connection c=ConnectionFactory.getConnection();PreparedStatement ps=c.prepareStatement(sql)){ps.setString(1,m.getTitle());ps.setString(2,m.getDescription());ps.setString(3,m.getType());ps.setInt(4,m.getRewardPoints());if(m.getRewardItemId()==null)ps.setNull(5,Types.NUMERIC);else ps.setLong(5,m.getRewardItemId());ps.setBoolean(6,m.getIsActive());ps.setTimestamp(7,Timestamp.from(m.getUpdatedAt()));ps.setLong(8,m.getId());if(ps.executeUpdate()==0)throw new IllegalArgumentException("Missão não encontrada: "+m.getId());return m;}catch(SQLException e){throw new IllegalStateException("Erro ao atualizar missão",e);}}
    public boolean deleteById(Long id){try(Connection c=ConnectionFactory.getConnection();PreparedStatement ps=c.prepareStatement("DELETE FROM T_CHLNG_MISSIONS WHERE id=?")){ps.setLong(1,id);return ps.executeUpdate()>0;}catch(SQLException e){throw new IllegalStateException("Erro ao excluir missão",e);}}
    private void bind(PreparedStatement ps,Mission m)throws SQLException{ps.setString(1,m.getTitle());ps.setString(2,m.getDescription());ps.setString(3,m.getType());ps.setInt(4,m.getRewardPoints());if(m.getRewardItemId()==null)ps.setNull(5,Types.NUMERIC);else ps.setLong(5,m.getRewardItemId());ps.setBoolean(6,m.getIsActive());ps.setTimestamp(7,Timestamp.from(m.getCreatedAt()));ps.setTimestamp(8,Timestamp.from(m.getUpdatedAt()));}
    private Mission map(ResultSet r)throws SQLException{Number rewardId=(Number)r.getObject("reward_item_id");return new Mission(r.getLong("id"),r.getString("title"),r.getString("description"),r.getString("type"),r.getInt("reward_points"),rewardId==null?null:rewardId.longValue(),r.getBoolean("is_active"),r.getTimestamp("created_at").toInstant(),r.getTimestamp("updated_at").toInstant());}
}
